# libreXC

./: .gitignore  CMakeLists.txt  README.md  config.ini
arduino/: .gitignore  CMakeConfig_example.txt  CMakeLists.txt  README.md  reset_serial.py  reset_serial_config_example.py
arduino/ArduinOBD/: ArduinOBD.ino  elm.ino  pidparser.ino
arduino/ArduinoDebugging/ELM/: ELM.ino
arduino/ArduinoDebugging/ELM_withlibrary/: ELM_withlibrary.ino
arduino/ArduinoDebugging/SerialTest/: SerialTest.ino
arduino/arduino/ArduinOBD/: ArduinOBD.ino
arduino/cmake/Platform/: Arduino.cmake
arduino/libraries/CAN/: can.cpp  can.h  keywords.txt  library.properties
arduino/libraries/ELM/: README.md  elm.cpp  elm.h  keywords.txt  library.properties
arduino/src/: librexc.ino
docs/TheRealSid-serial_xbee_bridge-3f3aa4dc3a90/: moltosenso_iron
docs/TheRealSid-serial_xbee_bridge-3f3aa4dc3a90/receiver/: receiver.ino
docs/TheRealSid-serial_xbee_bridge-3f3aa4dc3a90/sender/: sender.py
linuino/: README.md  broker.py  commands.py  config.py  data.py  logger.py  main.py  requirements.txt  security.py  websocket.py
linuino/logs/: 24.11.2015 12:25:22-default.json
